@startuml
!include ../../styles.puml
'https://plantuml.com/class-diagram

title Mediator Design Pattern Documentation

header
    The Mediator Pattern defines how a set of objects interact with each other.
    Instead of objects communicating directly, they communicate through a mediator,
    reducing dependencies and promoting loose coupling between components.
endheader

class Component {
    - name: String
    - mediator: Mediator
    + send(message: String): void
    + receive(message: String): void
}

class Mediator {
    + {abstract} notify(sender, event): void
    + {abstract} register(component: Component): void
}

Component "1" o-- "1" Mediator : communicates with

class ComponentMediator {
    + notify(sender: Component, message: String): void
    + register(component: Component): void
}

Mediator <|-- ComponentMediator

note top of Mediator
    The Mediator design pattern is a behavioral design pattern that reduces coupling between classes by making them
    communicate indirectly, through a mediator object. The mediator object handles and coordinates communication between
    different classes.
    In Python, we can implement the Mediator pattern using classes.
end note


@enduml